package com.company.old.pokemons;
import ru.ifmo.se.pokemon.*;

public class Silvally extends Pokemon {
    public Silvally(String name, int lvl) {
        super(name, lvl);
        setStats(95,95,95, 95, 95, 95);
        setType(Type.NORMAL);
        
    }

}